Add territory to amendment

--- a/app/views/amendments/_form.html.erb
+++ b/app/views/amendments/_form.html.erb
@@ -15,6 +15,7 @@
     <%= f.collection_radio_buttons :type, descendants_collection(Amendment), :first, :last, custom: :switch, inline: true, wrapper_class: 'align-items-center bootstrap-switch-success', class: 'bootstrap-switch-success' %>
   <% end %>
 
+  <%= f.collection_select :territory_id, Territory.all.order(:id).map{ |t| [t.id, t.display_name] }, :first, :last, include_blank: t('helpers.views.choose_model', model: Territory.model_name.human.downcase) %>
   <%= f.text_field :number %>
   <%= f.text_area :explanation, rows: '7' %>
 
