--- a/app/views/amendments/show.html.erb
+++ b/app/views/amendments/show.html.erb
@@ -102,13 +102,17 @@
 <% end %>
 
 <div class="actions row">
-  <div class="col-12 col-md-6">
+  <div class="col-12 col-md-8">
     <%= link_to t('helpers.action.edit'), edit_amendment_path(amendment), class: 'btn btn-sm btn-warning' %>
     <%= link_to t('helpers.action.destroy'), amendment_path(amendment), method: :delete, data: { confirm: t('helpers.messages.are_you_sure') }, class: 'btn btn-sm btn-danger' %>
     <%= link_to t('helpers.views.list_model', model: Amendment.model_name.human(count: 0).downcase), budget_amendments_path(budget), class: 'btn btn-sm btn-primary' %>
 
+    <% if amendment.docx.attached? %>
+      <%= link_to fa_icon("file-word-o", text: amendment.docx.filename), rails_blob_path(amendment.docx, disposition: "attachment"), class: 'btn btn-sm btn-outline-primary' %>
+    <% end %>
+
     <% if amendment.allow_modifications? %>
-    <%= link_to t('helpers.submit.modification.create'), new_amendment_modification_path(amendment), class: 'btn btn-sm btn-outline-success' %>
+      <%= link_to t('helpers.submit.modification.create'), new_amendment_modification_path(amendment), class: 'btn btn-sm btn-outline-success' %>
     <% end %>
 
     <% if amendment.allow_articulated? && !amendment.any_articulated? %>
@@ -116,7 +120,7 @@
     <% end %>
 
   </div>
-  <div class="col-12 col-md-6 text-right">
+  <div class="col-12 col-md-4 text-right">
     <small class="text-muted text-sm"><%= t 'helpers.views.by' %> <b class=""><%= amendment.user.full_name %></b></small>
   </div>
 </div>
